--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "IP": "0.0.0.0",
   "Port": 29294,
-  "ModulePath": "./data/modules",
+  "ModulesPath": "./data/modules",
   "DependencyPath": "./data/dependencies",
   "ConfigurationPath": "./data/configurations",
   "LogLevel": "None",
