--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,5 @@ jobs:
             -H "Authorization: token ${{ secrets.REPO_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/${{ github.repository }}/releases" \
-            -d '{
-              "tag_name": "$LATEST_RELEASE",
-              "name": "$LATEST_RELEASE",
-              "body": "",
-              "draft": false,
-              "prerelease": false
-            }'
+            -d  "{ \"tag_name\": \"$LATEST_RELEASE\", \"name\": \"$LATEST_RELEASE\", \"body\": \"\", \"draft\": false, \"prerelease\": false }"
         fi
