Also build the image on push for testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Check for External Repo Release
 on:
   schedule:
     - cron: '*/15 * * * *'
+  push: {branches: ["master", "main"]}
 
 jobs:
   check-release:
